добавляет взаимодействие с серверов и рендер карточек по данным с сервера

--- a/index.html
+++ b/index.html
@@ -252,6 +252,16 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
+
+  <!-- Сообщение об ошибке при загрузке -->
+  <template id="load-error">
+    <div class="load-error">
+      <p class="load-error__messege">
+        Произошла ошибка при загрузке данных!<br>Попробуйте обновить страницу.
+      </p>
+    </div>
+  </template>
+
   <script src="leaflet/leaflet.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
